add example of integrating react for incremental adoption

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,7 +7,5 @@ block append head
 block append content
   - var example = 'example';
 
-  .header
-    .layout-center
-      h1 Example
-      img(src=`${rootPath}example.png` alt='')
+  .container
+    #multi-step-form
