--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,25 +1,4 @@
-@import './helpers.scss';
-@import './reset.scss';
-
-html {
-  background: #fff;
-  color: #242425;
-}
-
-body {
-  min-height: 100vh;
-  overflow-x: hidden;
-  position: relative;
-  width: 100%;
-}
-
-// main styles
-
-.layout-center {
-  margin: 0 auto;
-  max-width: 100%;
-  width: 52rem;
-}
+@import 'bootstrap/scss/bootstrap';
 
 // font size for small screens
 
@@ -27,7 +6,7 @@ html {
   font-size: 100%;
 }
 
-@media (max-width: 18.75em) {
+@media (max-width: 18.875em) {
   html {
     font-size: 5.5vw;
   }
@@ -38,15 +17,6 @@ html {
 .is-hidden {
   display: none !important;
 }
-
-.usn {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-// misc
 
 .msg-bar {
   background-color: #000;
